...
      },
    )
  }

  render() {
    return (
      <View style={styles.container} testID="countryScreen">
        <FlatList
          contentContainerStyle={styles.listContent}
          data={this.props.countries}
          renderItem={this.renderRow}
          keyExtractor={this.keyExtractor}
          initialNumToRender={this.oneScreensWorth}
...
